# Ascend

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  db.py  mixins.py
backend/app/modules/habits/: models.py
backend/app/modules/system/: router.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_system.py
deploy/: docker-compose.yml
