[project]
name = "ascend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.21",
    "sqlalchemy[mypy]>=2.0.51",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear (ловит частые антипаттерны)
    "UP",  # pyupgrade (авто-апгрейд синтаксиса до target-version)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
